--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.6.1",
     "axios": "^0.27.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.20",
